Improve segment metadata polling on the Coordinator